--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,8 +1,8 @@
-* {
-    margin-left: 10px;
-    padding-left: 0px;
-}
+@import "reset.css";
 
+body{
+    padding: 20px 100px 300px 500px;
+}
 
 h1,h2,h3,h4,h5,h6{
     font-family: sans-serif;
