--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,19 +1,56 @@
 @import "reset.css";
 
+
+@font-face {
+    font-family: "IBM-Plex-Serif";
+    src: url("/assets/fonts/IBMPlexSerif-Regular.otf");
+}
+
+@font-face {
+    font-family: "IBM-Plex-Sans";
+    font-weight: 600;
+    src: url("/assets/fonts/IBMPlexSans-Medium.otf");
+}
+
+@font-face {
+    font-family: "IBM-Plex-Sans";
+    font-weight: 700;
+    src: url("/assets/fonts/IBMPlexSans-Bold.otf");
+}
+
+
 body{
-    padding: 20px 100px 300px 500px;
+    padding: 20px;
+    font-size: 18px;
+    font-family: IBM-Plex-Serif, 'Times New Roman', Times, serif;
 }
 
-h1,h2,h3,h4,h5,h6{
-    font-family: sans-serif;
+h1,h2, h3 {
+    font-family: IBM-Plex-Sans, Arial, Helvetica, sans-serif;
+    font-weight: 700; 
 }
 
-.div-header{
-    font-family: sans-serif;
-    max-width: 500px;
-    margin-left: auto;
-    margin-right:0px;
-    color: #666;
+h3 {
+    font-weight: 600; 
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+
+h3, dt {
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+p {
+    margin-bottom: 2rem;
 }
 
 
@@ -60,5 +97,13 @@ th {
 footer {
     margin: 0;
     padding: 0;
+}
+
+.div-header{
+    font-family: sans-serif;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right:0px;
+    color: #666;
 }
 
