--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,103 +1,15 @@
 @import "reset.css";
+@import "variables.css";
+@import "fonts.css";
+@import "base.css";
+@import "components.css";
 
 
-@font-face {
-    font-family: "IBM-Plex-Serif";
-    src: url("/assets/fonts/IBMPlexSerif-Regular.otf");
-}
-
-@font-face {
-    font-family: "IBM-Plex-Sans";
-    font-weight: 600;
-    src: url("/assets/fonts/IBMPlexSans-Medium.otf");
-}
-
-@font-face {
-    font-family: "IBM-Plex-Sans";
-    font-weight: 700;
-    src: url("/assets/fonts/IBMPlexSans-Bold.otf");
-}
 
 
-body{
-    padding: 20px;
-    font-size: 18px;
-    font-family: IBM-Plex-Serif, 'Times New Roman', Times, serif;
-}
-
-h1,h2, h3 {
-    font-family: IBM-Plex-Sans, Arial, Helvetica, sans-serif;
-    font-weight: 700; 
-}
-
-h3 {
-    font-weight: 600; 
-}
-
-h1 {
-    font-size: 2rem;
-}
-
-h2 {
-    font-size: 1.6rem;
-    font-weight: 600;
-}
 
 
-h3, dt {
-    font-size: 1.25rem;
-    font-weight: 600;
-}
 
-p {
-    margin-bottom: 2rem;
-}
-
-
-cite, figcaption{
-    font-size: 10px;
-    font-style: normal;
-    font-family: sans-serif;
-    font-weight: 600;
-    color: #AAA;
-}
-
-blockquote{
-    font-style: italic;
-    font-family: sans-serif;
-    font-weight: bold;
-    color: rgb(223, 149, 13);
-}
-
-dt {
-    font-family: sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    margin:0;
-    color: #999;
-    padding-bottom: 0.2rem;
-}
-dd {
-    margin:0;
-    padding-bottom: 1rem;
-}
-
-article {
-    margin-bottom: 40px;
-}
-
-table, th, td {
-    border: 1px solid;
-}
-
-th {
-    background-color: #DDD;
-}
-
-footer {
-    margin: 0;
-    padding: 0;
-}
 
 .div-header{
     font-family: sans-serif;
