--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -1,11 +1,11 @@
 body{
-    padding: 20px;
-    font-size: 18px;
+    padding: var(--m);
+    font-size: var(--m);
     font-family: IBM-Plex-Serif, 'Times New Roman', Times, serif;
 }
 
 article {
-    margin-bottom: 40px;
+    margin-bottom: var(--xxxl);
 }
 
 footer {
@@ -13,51 +13,45 @@ footer {
     padding: 0;
 }
 
-h1,h2, h3 {
+h1,h2,h3 {
     font-family: IBM-Plex-Sans, Arial, Helvetica, sans-serif;
     font-weight: 700; 
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: var(--xl);
 }
 
 h2 {
-    font-size: 1.6rem;
+    font-size: var(--l);
     font-weight: 600;
 }
 
 h3, dt {
-    font-size: 1.25rem;
-    font-weight: 600;
+    font-family: sans-serif;
+    font-size: var(--m);
+    font-weight: bold;
+    color: var(--darker);
+    padding-bottom: var(--xxs);
 }
 
 p {
-    margin-bottom: 2rem;
+    margin-bottom: var(--xl);
 }
 
 cite, figcaption{
-    font-size: 10px;
+    font-size: var(--s);
     font-style: normal;
     font-family: sans-serif;
     font-weight: 600;
-    color: #AAA;
+    color: var(--dark);
 }
 
 blockquote{
     font-style: italic;
     font-family: sans-serif;
     font-weight: bold;
-    color: rgb(223, 149, 13);
-}
-
-dt {
-    font-family: sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    margin:0;
-    color: #999;
-    padding-bottom: 0.2rem;
+    color: var(--color-accent);
 }
 
 dd {
@@ -66,10 +60,10 @@ dd {
 }
 
 table, th, td {
-    border: 1px solid;
+    border: var(--border-with-s) solid;
 }
 
 th {
-    background-color: #DDD;
+    background-color: var(--light);
 }
 
