--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -1,7 +1,7 @@
-.div-header{
+.div-header {
     font-family: sans-serif;
-    max-width: 500px;
+    max-width: var(--container-width-s);
     margin-left: auto;
-    margin-right:0px;
-    color: #666;
+    margin-right: 0;
+    color: var(--darkest);
 }
